--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,8 @@ android {
     }
 
     dependencies {
-        implementation 'androidx.appcompat:appcompat:1.1.0'
+        implementation 'androidx.appcompat:appcompat:1.4.1'
+        implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
         def camerax_version = "1.0.2"
 //        implementation "androidx.camera:camera-core:$camerax_version"
 //        implementation "androidx.camera:camera-camera2:$camerax_version"
