--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
         implementation 'com.squareup.retrofit2:retrofit:2.1.0'
         implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
         implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+        implementation 'com.github.bumptech.glide:glide:4.11.0'
         implementation project(":ncnn")
         def camerax_version = "1.0.2"
 //        implementation "androidx.camera:camera-core:$camerax_version"
