--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,8 @@ android {
         implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
         implementation 'com.github.bumptech.glide:glide:4.11.0'
         implementation 'com.github.donkingliang:LabelsView:1.6.5'
+        implementation 'androidx.viewpager2:viewpager2:1.0.0'
+        implementation "com.google.android.material:material:1.1.0-beta01"
         implementation project(":ncnn")
         def camerax_version = "1.0.2"
 //        implementation "androidx.camera:camera-core:$camerax_version"
