--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:name=".PicApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/main"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         android:label="@string/app_name">
         <activity
