--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
         applicationId "hk.hku.cs.picshare"
         archivesBaseName = "$applicationId"
         minSdkVersion 27
+        buildConfigField("String", "ServerUrl", '"http://3.88.236.75:8080/"')
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
