--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,11 @@
         android:name=".PicApplication"
         android:allowBackup="true"
         android:icon="@drawable/main"
-        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+        <activity
+            android:name=".WebviewActivity"
+            android:exported="false" />
         <activity
             android:name=".post.ImagePreviewActivity"
             android:exported="false" />
@@ -26,8 +29,8 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
